# ComfyUI-FrameFX

./: .gitattributes  AnimatedWeights 2.1 EFX.json  ComfyUI_Live_Prompt_Interpolation.py  ComfyUI_Prompt_Stack_Manager.py  DynamicAnimatedWeights.py  FX_Source_Img.py  FlorenceTravelHelper.py  MaskSequenceHelper.py  PromptTravelHelper.py  README.md  __init__.py  pyproject.toml
workflows/: Animated Weights 2.1 EFX.json  AnimatedWeights 2.10 EFX.json  AnimatedWeights 2.10 EFX_tempfix.json  AnimatedWeights 2.101.json  BlipTravel_AutoWeights_1.5.json  Dream Zoom 1.21.json
