[project]
name = "comfyui-framefx"
description = "Nodes:Live Prompt Interpolation, Prompt Stack Manager, Dynamic Animated Weights, Florence Prompt Travel Helper, Mask Sequence Helper, Prompt Travel Helper. This extension provides various frame and mask sequence manipulation tools for animation workflows."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/mgfxer/ComfyUI-FrameFX"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "mgfxer"
DisplayName = "ComfyUI-FrameFX"
Icon = "💫"
